modified:   .env 	new file:   Dockerfile 	new file:   docker-compose.yml 	modified:   public/pages/getKey.html 	modified:   public/pages/watch.html 	modified:   public/script/watch.js 	modified:   public/stylesheet/watch.css 	new file:   rtmp/Dockerfile 	new file:   rtmp/nginx.conf 	modified:   server.js

--- a/public/pages/getKey.html
+++ b/public/pages/getKey.html
@@ -9,7 +9,7 @@
     <h1>Live Stream</h1>
     <div id="streamKeyContainer"></div>
     <button id="fetchStreamKeyBtn">Get Stream Key</button>
-
+        <a href="/../ceabj/public/pages/"></a>
     <script>
         document.getElementById('fetchStreamKeyBtn').addEventListener('click', function() {
             fetch('/stream-key')
