--- a/public/pages/watch.html
+++ b/public/pages/watch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="../src/favicon.ico">
     <link rel="stylesheet" href="../stylesheet/watch.css">
     <link rel="stylesheet" href="../annimations.css">
     <link rel="stylesheet" href="../media.css">
@@ -74,19 +75,22 @@
             </div>
         </div>
     </nav>
+    <section class="navgation-title">
+        <!-- div. -->
+    </section>
     <main class="watch-main">
-        <aside class="watch-left-content">
+        <section class="watch-left-content">
             <div class="watch-container">
                 <div class="stream-container" id="stream-container">
-                    <h1>Live Stream</h1>
-                    <div id="player"></div>
+                    <h1>Watch Live Service</h1>
+                    <div class="Iframe-holder" id="player"></div>
                 </div>
             </div>
-        </aside>
-        <aside class="watch-right-content">
+        </section>
+        <section class="watch-right-content">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iusto nostrum esse et pariatur neque libero obcaecati doloremque reprehenderit similique, magnam recusandae! Labore odit dolore nostrum quidem cupiditate assumenda id.</p>
             <!-- Repeated content removed for brevity -->
-        </aside>
+        </section>
     </main>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="https://apis.google.com/js/api.js"></script>
