--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -33,53 +33,25 @@
       >
 </head>
 <body>
-    <nav class="landing-page-navbar" aria-label="Main Navigation">
-        <div class="navbar-box">
-            <div class="navbar-logo-title">
-                <a href="../index.html" target="_self"><img src="../src/pngaaa.com-147010.png" alt="Ce Abaranje Logo" title="Ce Abaranje" id="navbar-logo"></a>
-                <a href="../index.html" target="_self"><p>CE ABARANJE</p></a>  
-            </div>
-            <ul class="navbar-list">
-                <li><a href="../index.html" target="_self">Home</a></li>
-                <li><a href="../pages/watch.html">Watch</a></li>
-                <li><a href="#cell-reporting">Cell Reporting</a></li>
-                <li><a href="#worship">Worship With Us</a></li>
-            </ul>
-            <div class="login-container" id="login">
-                <div class="login_icon" id="loginIcon">
-                    <i class="fa-solid fa-user fa-xl"></i>
-                </div>
-                <div class="login-content-before-click" id="user-dropdown">
-                    
-                    <span class="user-greeting">
-                        <span class="cancel-container">
-                            <i class="fa-solid fa-x fa-sm" id="cancel-click"></i>
-                        </span>
-                        <div class="greeting-contents">
-                            <span class="greeting-user">
-                                <i class="fa-duotone fa-user fa-xl"></i>
-                            </span>
-                            <h1 class="userGreeting"></h1>
-                        </div>
-                    </span>
-                    <div>
-                        <div class="login-links">
-                            <span class="first-a-child">
-                                <a href="../pages/dashboard.html"><p>DashBoard</p><i class="fa-duotone fa-chart-tree-map fa-lg"></i></a>
-                            </span>
-                            <span class="second-child">
-                                <i class="fa-duotone fa-file-chart-column fa-lg"></i>
-                                <a href="#"><p>Submit Report</p></a>
-                            </span>
-                            <span class="button-child">
-                                <button class="btn-72" id="Logout-Button" title="LogOut"><p>Log Out</p><i class="fa-duotone fa-right-from-bracket fa-lg"></i></button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <main>
+  <header class="horizontal-navbar">
+    <div></div>
+  </header>
+  <main class="dashboard-sub-body">
+    <nav class="vertical-navbar">
+      <div class="navbar-container">
+        <ul class="dashboard-links">
+        <li class="dashboard-items">Profile</li>
+        <li class="dashboard-items">Overview</li>
+        <li class="dashboard-items">Submit Report</li>
+        <li class="dashboard-items">Announcements</li>
+        <!-- <li class="dashboard-items"></li> -->
+      </div>
     </nav>
-    <script defer src="../script/dashboard.js"></script>
+    <section>
+        
+    </section>
+  </main>
+  <script defer src="../script/dashboard.js"></script>
 </body>
 </html>
