Edit Profile Dashboar semiComplete

--- a/public/index.html
+++ b/public/index.html
@@ -96,11 +96,15 @@
                 <div class="landing-page-Title-box">
                     <div class="landing-page-main-title">
                         <h2>CE ABARANJE GROUP</h2>
-                        <p>Piloted by grace</p>
+                        <span class="landing-page-main-sub-title">
+                            <p id="text1">Piloted by grace</p>
+                            <p id="text2" style="display: none;">It has Happend !!!</p>
+                        </span>
                     </div>
                 </div>
             </div>
         </main>
+        
     </header>
 
     <main class="landing-page-sub-main">
