Project Structure Shuffling

--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
                         <div>
                             <div class="login-links">
                                 <span class="first-a-child">
-                                    <a href="./pages/dashboard.html"><p>DashBoard</p><i class="fa-duotone fa-chart-tree-map fa-lg"></i></a>
+                                    <a href="./dashboard/edit-profile.html"><p>DashBoard</p><i class="fa-duotone fa-chart-tree-map fa-lg"></i></a>
                                 </span>
                                 <span class="second-child">
                                     <i class="fa-duotone fa-file-chart-column fa-lg"></i>
-                                    <a href="#"><p>Submit Report</p></a>
+                                    <a href="./dashboard/submit-report.html"><p>Submit Report</p></a>
                                 </span>
                                 <span class="button-child">
                                     <button class="btn-72" id="Logout-Button" title="LogOut"><p>Log Out</p><i class="fa-duotone fa-right-from-bracket fa-lg"></i></button>
