--- a/public/admin/view-users.html
+++ b/public/admin/view-users.html
@@ -58,10 +58,10 @@
                 <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i>Overview</li></a>
                 <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i>Add a cell</li></a>
                 <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i>View Users</li></a>
-                <a href="#"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>View Cell Reports</li></a>
-                <a href="#"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>Souls Won</li></a>
-                <a href="#"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>Schedule Service</li></a>
-                <a href="#"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>Annoucements</li></a>
+                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>View Cell Reports</li></a>
+                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>Souls Won</li></a>
+                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>Schedule Service</li></a>
+                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>Annoucements</li></a>
                 <!-- <li class="dashboard-items></li> -->
               </ul>
             </div>
