--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -33,6 +33,9 @@
       >
 </head>
 <body>
+  <div class="loader">
+    <div class="inner-loader"></div>
+  </div>
   <main class="sub-body">
     <main class="dashboard-sub-body">
       <nav class="vertical-navbar">
@@ -43,10 +46,7 @@
                 <span class="greeting-user">
                   <i class="fa-duotone fa-user fa-2xl"></i>
                 </span>
-                <div class="title-users-name">
-                  <span><p class="userGreeting first-text" id="usersTitle"></p></span>
-                  <span><p class="userGreeting" id="usersdetails"></p></span>
-                </div>
+                <span><p class="userGreeting" id="usersdetails">Admin</p></span>
               </div>
               <span class="edit-profile hidden">
                 <i class="fa-duotone fa-user-pen"></i>
