--- a/public/dashboard/submit-report.html
+++ b/public/dashboard/submit-report.html
@@ -61,7 +61,7 @@
             </div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
-                  <li class="dashboard-items"><a href="#"><i class="fa-duotone fa-diagram-lean-canvas"></i>Overview</a></li>
+                  <li class="dashboard-items"><a href="./edit-profile.html"><i class="fa-duotone fa-diagram-lean-canvas"></i>Overview</a></li>
                   <li class="dashboard-items"><a href="./submit-report.html"><i class="fa-duotone fa-pen-to-square"></i>Submit Report</a></li>
                   <li class="dashboard-items"><a href=""><i class="fa-duotone fa-megaphone fa-rotate-by" style="--fa-rotate-angle: 325deg;""></i>Announcements</a></li>
                 <!-- <li class="dashboard-items"></li> -->
