--- a/public/pages/watch.html
+++ b/public/pages/watch.html
@@ -30,9 +30,9 @@
             </div>
             <ul class="navbar-list">
                 <li><a href="../index.html" target="_self">Home</a></li>
-                <li><a href="#watch">Watch</a></li>
-                <li><a href="#cell-reporting">Cell Reporting</a></li>
+                <li><a href="./watch.html">Watch</a></li>
                 <li><a href="#worship">Worship With Us</a></li>
+                <li><a href="#About">About</a></li>
             </ul>
             <div class="login-container" id="login">
                 <div class="login_icon" id="loginIcon">
@@ -53,14 +53,14 @@
                     <div>
                         <div class="login-links">
                             <span class="first-a-child">
-                                <a href="./dashboard.html">
+                                <a href="../dashboard/edit-profile.html">
                                     <p>DashBoard</p>
                                     <i class="fa-duotone fa-chart-tree-map fa-lg"></i>
                                 </a>
                             </span>
                             <span class="second-child">
                                 <i class="fa-duotone fa-file-chart-column fa-lg"></i>
-                                <a href="#">
+                                <a href="../dashboard/submit-report.html">
                                     <p>Submit Report</p>
                                 </a>
                             </span>
