--- a/public/dashboard/edit-profile.html
+++ b/public/dashboard/edit-profile.html
@@ -146,7 +146,7 @@
                   </select>
                   <label for="LeadershipPosition">Leadership Positon</label>
                 </div>
-
+<!-- change the select to a div -->
                 <div class="form-group" id="cellnamegroup" style="display: none;">
                   <label for="NameOfCell" id="cellname-label">.</label>
                   <select type="text" placeholder=" " name="NameOfCell" id="NameOfCell">
